--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ node_js:
 - '0.10'
 before_install:
 - openssl aes-256-cbc -K $encrypted_85007a740e51_key -iv $encrypted_85007a740e51_iv
-  -in .travis/deploy_key.enc -out .travis/deploy_key -d
-- openssl aes-256-cbc -K $encrypted_85007a740e51_key -iv $encrypted_85007a740e51_iv
   -in .travis/deploy.enc -out .travis/deploy -d
+- openssl aes-256-cbc -K $encrypted_85007a740e51_key -iv $encrypted_85007a740e51_iv
+  -in .travis/deploy_key.enc -out .travis/deploy_key -d
 - ssh-add .travis/deploy_key
-- ".travis/deploy"
+after_success:
+- .travis/deploy
