--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: node_js
 node_js:
 - '0.10'
 before_install:
-- openssl aes-256-cbc -K $encrypted_85007a740e51_key -iv $encrypted_85007a740e51_iv
-  -in .travis/deploy.enc -out .travis/deploy -d
-- openssl aes-256-cbc -K $encrypted_85007a740e51_key -iv $encrypted_85007a740e51_iv
+- openssl aes-256-cbc -K $encrypted_dee8573ba08d_key -iv $encrypted_dee8573ba08d_iv
   -in .travis/deploy_key.enc -out .travis/deploy_key -d
 - ssh-add .travis/deploy_key
 after_success:
-- .travis/deploy
+- ".travis/deploy"
