--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 before_install:
 - openssl aes-256-cbc -K $encrypted_dee8573ba08d_key -iv $encrypted_dee8573ba08d_iv
   -in .travis/deploy_key.enc -out .travis/deploy_key -d
+- eval "$(ssh-agent)"
 - ssh-add .travis/deploy_key
 after_success:
 - ".travis/deploy"
