--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ before_install:
 - chmod 600 .travis/deploy_key
 - eval "$(ssh-agent)"
 - ssh-add .travis/deploy_key
+script: echo "Deploying to wilma ..."
 after_success:
 - ".travis/deploy"
